compiler/src/test/resources/amyc/execution/passing/FunCallEnv.grading.amy
object FunCallEnv
  fn printRec(i: Int, j: Int): Unit = {
    if (i <= 0) { () } else {
      Std.printInt(i);
      Std.printInt(j);
      printRec(i - 1, j / 2)
    }
  }

  printRec(3, 8)

end FunCallEnv
